2010-05-07  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Edit ac-prefix-c-dot for :: in C++.

2010-05-06  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (c-mode-common-hook): User c-mode-common-hook to
	load sourcepair.
	(eim-use-package): Set autoload for eim.
	(find-file-hooks): User find-file-hooks to load highlight-parentheses.

	* init-basic.el (switch-to-back-buffer): Rename to switch-to-other-buffer.

	* init-misc.el (require): Set sourcepair for eval-after-load.
	: Add advice to ac-update-word-index-1, hack for eim(hidden buffer).

	* init-basic.el: Set mouse-avoidance-mode to animate.
	(frame-title-format): Set frame-title-format.
	(frame-title-format): Reset frame-title-format.
	(c-mode-common-hook): Don't turn on auto-fill-mode in cc-mode.

2010-05-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (switch-to-back-buffer): Add func
	switch-to-back-buffer and it's pulse advice.

	* init-misc.el: Remove Bind <left-margin> <mouse-1> to bm-toggle-mouse.
	: Set pluse advice for bm-next, bm-previous, bm-next-mouse, bm-previous-mouse.
	: Set bm-highlight-style to bm-highlight-only-fringe when window-system.

	* init-basic.el: Bind (kbd "C-c , ,") to semantic-force-refresh.

2010-05-04  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Set auto-complete's ac-modes and
	ac-dictionary-directories.

2010-05-03  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Setting visual-studio-bookmarks.

	* init-misc.el: Add semantic-tag-folding setting.
	: Setting bm.

	* init-basic.el: Pulse setting.
	: Remove semantic-tag-folding setting.

	* init-site.el: Disable visual-studio-bookmarks, use bm instead.

	* init-misc.el: Add bm.

	* init-basic.el: Enable global-semantic-mru-bookmark-mode.
	: Load semantic/analyze/refs for semantic-ia-fast-jump.
	: Refactor include-dirs.

2010-04-30  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Update auto-complete to 1.2
	: Add org setup for auto-complete.
	(ac-prefix-c-dot): Hack for c++(->).
